Fix: `libraryId` not included
