# build-docs/swagger-output.json
@@ -127,6 +127,23 @@
             "$ref": "#/components/schemas/addedAt"
           }
         }
+      },
+      "oldLibraryId": {
+        "type": "string",
+        "description": "The ID of the libraries created on server version 2.2.23 and before.",
+        "format": "lib_[a-z0-9]{18}",
+        "example": "lib_o78uaoeuh78h6aoeif"
+      },
+      "libraryId": {
+        "type": "string",
+        "anyOf": [
+          {
+            "$ref": "#/components/schemas/oldLibraryId"
+          },
+          {
+            "$ref": "#/components/schemas/newId"
+          }
+        ]
       }
     }
   },
